# asset-geo-extractor

./: .dockerignore  .gitignore  CONTRIBUTING.md  Dockerfile  README.md  makefile  pyproject.toml
asset_geo_extractor/: __init__.py  elastic.py  gitlab.py  main.py  mq.py  utils.py
asset_geo_extractor/extractors/: __init__.py  base.py  geo_json.py
asset_geo_extractor/workers/: __init__.py  geo_worker.py
